# raytracer

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  sp20-cs242-iniguez-tianrui5-proposal.md
raytracer/src/: CMakeLists.txt  main.cpp
raytracer/src/BRDFs/: BRDF.cpp  BRDF.h  BlinnPhong.cpp  BlinnPhong.h  GlossySpecular.cpp  GlossySpecular.h  Lambertian.cpp  Lambertian.h  PerfectSpecular.cpp  PerfectSpecular.h
raytracer/src/Cameras/: Camera.cpp  Camera.h  Pinhole.cpp  Pinhole.h
raytracer/src/GeometricObjects/: Compound.cpp  Compound.h  GeometricObject.cpp  GeometricObject.h  Grid.cpp  Grid.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
raytracer/src/Lights/: Ambient.cpp  Ambient.h  Directional.cpp  Directional.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
raytracer/src/Materials/: Material.cpp  Material.h  Matte.cpp  Matte.h  Metallic.cpp  Metallic.h  Phong.cpp  Phong.h  Plastic.cpp  Plastic.h  Polished.cpp  Polished.h  Reflective.cpp  Reflective.h
raytracer/src/Math/: MathUtils.cpp  MathUtils.h  Matrix.cpp  Matrix.h  Normal.cpp  Normal.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  Ray.cpp  Ray.h  Vector3D.cpp  Vector3D.h
raytracer/src/Samplers/: Jittered.cpp  Jittered.h  MultiJittered.cpp  MultiJittered.h  NRooks.cpp  NRooks.h  PureRandom.cpp  PureRandom.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h
raytracer/src/Tracers/: MultipleObjects.cpp  MultipleObjects.h  RayCast.cpp  RayCast.h  SingleSphere.cpp  SingleSphere.h  Tracer.cpp  Tracer.h  Whitted.cpp  Whitted.h
raytracer/src/Utilities/: BBox.cpp  BBox.h  Constants.h  RGBColor.cpp  RGBColor.h  ShadeRec.cpp  ShadeRec.h
raytracer/src/World/: ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
src/: main.cpp  (+1 more)
(+29 files in other folders)
